logo on small device css fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1993,7 +1993,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 28px;
   }
   #header #logo img {
-    max-height: 40px;
+    /*max-height: 40px;*/
   }
 }
 
